k8s/platform/repositories/gitlab/gitlab-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-web-route
  namespace: devops-tools
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitlab.desarrollo`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8181
